# RepoLens

./: .env.example  .gitignore  README.md
backend/: .env  .gitignore  config.py  main.py  nodemon.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
backend/ai/: client.py  narrator.py  nl_router.py  summarizer.py
backend/api/: query.py  repos.py
backend/app/: config.py  database.py
backend/app/routes/: repo_routes.py
backend/app/services/: ai_service.py  github_service.py  graph_service.py  parser_service.py
backend/controllers/: aiController.js  analyzeController.js  searchController.js
backend/engine/graph/: builder.py  classifier.py  scorer.py  serializer.py
backend/engine/ingestion/: cloner.py  walker.py
backend/engine/onboarding/: planner.py
backend/engine/parsing/: base_parser.py  dispatcher.py  js_parser.py  python_parser.py
backend/models/: Repository.js
backend/repolens_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/routes/: aiRoutes.js  analyzeRoutes.js
backend/services/: analyzeService.js  geminiService.js  groqService.js
backend/workers/: analyze_task.py
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.jsx  App.tsx  api.ts  index.css  store.ts  styles.css  types.ts
scratch/: verify_glob.js
server/: Untitled  index.js  package-lock.json  package.json
server/middleware/: errorHandler.js
(+53 files in other folders)
