[project]
name = "repolens-backend"
version = "0.1.0"
description = "RepoLens backend service"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "gitpython>=3.1.43",
  "networkx>=3.3",
  "scikit-learn>=1.5.1",
  "google-generativeai>=0.8.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "structlog>=24.4.0",
  "tree-sitter>=0.23.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"